# untitled_ldtk_rpg

./: Cargo.toml
.github/workflows/: rust-ci.yml
assets/LDtk/: new_world.ldtk  world.ldtk
src/: components.rs  main.rs  systems.rs
src/components/: buildings.rs  colliders.rs  door.rs  mobs.rs  player.rs  sign.rs  trees.rs  ui.rs  wall.rs
src/systems/: animation.rs  collision_events.rs  patrol.rs
