[package]
edition = "2021"
name = "untitled_ldtk_rpg"
version = "0.11.0"

[dependencies]
# This makes builds for development much faster!
# NOTE from official docs:
# Remember to revert this before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. If you remove the "dynamic" feature, your game executable can run standalone.
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
# bevy = "0.11"
bevy_ecs_ldtk = "0.10.0"
bevy_rapier2d = "0.27"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
